# N-V19

./: .coveragerc  .dockerignore  .env.example  .gitignore  ANALYSE_COMPLETE_V19.md  ARCHITECTURE.md  CHANGELOG_V19_3.md  CLAUDE.md  CLAUDE_CODE_MISSION.md  COMPLETION_REPORT.md  DEPLOYMENT_GUIDE.md  Dockerfile  EXECUTIVE_SUMMARY.md  FINAL_SUMMARY.md  INNOVATIONS_V19_7_COMPLETE.md  INTEGRATION_COMPLETE.md  INTEGRATION_V19_7_SNIPPETS.md  MISSION_COMPLETE.md  QUICKSTART.md  README.md  RUN.sh  SYSTEM_IDENTITY.ini  V19_7_FINAL_VALIDATION.md  alembic.ini  cloudbuild.yaml  contrat d'existence de NAYA par sa creatrice.txt  deploy-railway.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  install.sh  main.py  nginx.conf  pyproject.toml  render.yaml  requirements.txt  setup.sh  start.sh  vercel.json
ASYNC/: celery_tasks.py
BUSINESS_ENGINES/: __init__.py
CATALOGUE_OT/: __init__.py  catalogue_engine.py
CHANNEL_INTELLIGENCE/: __init__.py  access_strategy_engine.py  channel_project_bridge.py  channel_registry.py  credibility_guard.py  multi_channel_manager.py  publication_orchestrator.py  storytelling_engine.py
CLIENT_PORTAL/: index.html
CONSTITUTION/: __init__.py  evolution_constraints.py  governance_rules.py  invariants.py  leadership_rules.py  premium_floor.py
EVENT_STREAMING/: event_bus.py  event_bus_v2.py
EVOLUTION_SYSTEM/: __init__.py  anticipation_engine.py  autonomous_learner.py  evolution_engine.py  evolution_orchestrator.py  kpi_engine.py  post_challenge_decision_engine.py  proposal_generator.py  regression_guard.py  shi_engine.py
KERNEL/: __init__.py  (+4 more)
(+1163 files in other folders)
