[project]
name = "naya-supreme"
version = "19.3.0"
description = "Autonomous AI Business System - 11 Agents, Multi-Stream Revenue"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["F821"]

[tool.black]
target-version = ["py311"]
line-length = 120
